--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
     <div class="form-container">
         <h1>استبانات</h1>
-        <form id="surveyForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
-            </div>
+<form id="surveyForm" method="POST" action="https://script.google.com/macros/s/1bBoRgkX2jzCDFgeJpQRuthbYf3GHYusMh6Jw4UMdnzY5UszXJYONk7RK/exec">
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+    </div>
 
-            <div class="form-group">
-                <label for="class">Class:</label>
-                <input type="text" id="class" name="class" placeholder="Enter your Class" required>
-            </div>
+    <div class="form-group">
+        <label for="class">Class:</label>
+        <input type="text" id="class" name="class" placeholder="Enter your Class" required>
+    </div>
 
-            <div class="question">
-                <label>1. ماهي لغتك الأم؟</label>
-                <div class="question-options">
-                    <div class="option"><input type="radio" name="q1" value="العربية" required> العربية</div>
-                    <div class="option"><input type="radio" name="q1" value="الإنجليزية" required> الإنجليزية</div>
-                </div>
-            </div>
+    <div class="question">
+        <label>1. ماهي لغتك الأم؟</label>
+        <div>
+            <input type="radio" name="q1" value="العربية" required> العربية
+            <input type="radio" name="q1" value="الإنجليزية" required> الإنجليزية
+        </div>
+    </div>
 
             <div class="question">
                 <label>2. هل لديك معرفة سابقة باللغة الصينية؟</label>
